Fix: specifies overflow property

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
 }
-
+/* 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -30,7 +30,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 /* Header */
 
@@ -52,6 +52,7 @@
   background-color: #eee;
   z-index: 1;
   position: absolute;
+  overflow-y: scroll;
 }
 
 
